# rrr-make

./: Cargo.toml  README.md
.github/workflows/: rust.yml
assets/source-directory-template/: registry.toml
assets/source-directory-template/root/: data.txt  record.toml
assets/source-directory-template/root/manual-split/: data.0.txt  data.1.txt  data.2.txt  record.toml
assets/source-directory-template/root/my-record/: data.md  record.toml
src/: assets.rs  bin.rs  error.rs  lib.rs
src/cmd/: mod.rs
src/owned/: record.rs  registry.rs
src/util/: serde.rs
tests/: test.rs
